Issue #1918584 by Zarabadoo: Set a min-height on the welcome text container and prevent awkward formatting on small screens.

--- a/css/global.base.css
+++ b/css/global.base.css
@@ -79,7 +79,7 @@ input[type="button"] {
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  background: #dddddd url('../images/button.png?1359649077') repeat-x;
+  background: #dddddd url('../images/button.png?1361392506') repeat-x;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
   background-image: -webkit-linear-gradient(#ffffff, #dddddd);
   background-image: -moz-linear-gradient(#ffffff, #dddddd);
@@ -313,7 +313,7 @@ optgroup::-moz-focus-inner {
 .ie6_button,
 * html button,
 * html a.button {
-  background: #dddddd url('../images/button.png?1359649077') repeat-x;
+  background: #dddddd url('../images/button.png?1361392506') repeat-x;
   border: 1px solid;
   border-color: #dddddd #bbbbbb #999999;
   cursor: pointer;
@@ -434,7 +434,7 @@ optgroup::-moz-focus-inner {
 }
 .block-search .selectBox-dropdown .selectBox-label:after {
   content: '';
-  background: url('../images/icons-sd7570a61fb.png') 0 -1239px no-repeat;
+  background: url('../images/icons-se7682cf316.png') 0 -1125px no-repeat;
   width: 8px;
   height: 10px;
   display: inline-block;
@@ -454,7 +454,7 @@ optgroup::-moz-focus-inner {
   right: 0;
   width: 23px;
   height: 100%;
-  background: url('../images/jquery.selectBox-arrow.gif?1359649077') 50% center no-repeat;
+  background: url('../images/jquery.selectBox-arrow.gif?1361392506') 50% center no-repeat;
   border-left: solid 1px #bbbbbb;
 }
 .block-search .selectBox-dropdown .selectBox-arrow {
