--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3966,17 +3966,11 @@ body.front {
 body.front.not-logged-in {
   #block-system-main {
     .pane-1 {
-      float:left;
-      width:56%;
       .pane-title {
         font-weight:700;
         font-size:38px;
         color:$dark_gray;
       }
-    }
-    .pane-2 {
-      float:right;
-      width:40%;
     }
   }
 }
