--- a/sass/lt-ie9.scss
+++ b/sass/lt-ie9.scss
@@ -13,3 +13,21 @@
 html {
   font-size: 81.3%;
 }
+
+body.front.not-logged-in {
+  .region-three-33-top {
+    margin-bottom: 24px;
+    min-height: 460px;
+  }
+
+  #block-system-main {
+    .pane-1 {
+      float:left;
+      width:56%;
+    }
+    .pane-2 {
+      float:right;
+      width:40%;
+    }
+  }
+}
