--- a/sass/responsive.custom.scss
+++ b/sass/responsive.custom.scss
@@ -80,7 +80,25 @@
 /*
  * Tablet sizes and up
  */
-/* @media only screen and (min-width: 768px) {} */
+@media only screen and (min-width: 768px) {
+  body.front.not-logged-in {
+    .region-three-33-top {
+      margin-bottom: 24px;
+      min-height: 460px;
+    }
+
+    #block-system-main {
+      .pane-1 {
+        float:left;
+        width:56%;
+      }
+      .pane-2 {
+        float:right;
+        width:40%;
+      }
+    }
+  }
+}
 
 
 /*
